xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










• Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.
╭──────────────────────────────────────────────────────────────────────────────╮
│❯ Ask Xedoc to do anything                                                    │
╰────────────────────────────────────────────────────────────────gpt-5.6-sol─0s╯
  gpt-5.6-sol default · /tmp/project
