xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__compaction_progress_status.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Compacting Preparing compaction (0s • esc to interrupt)                       "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Xedoc to do anything                                                    │"
"╰────────────────────────────────────────────────────────────────gpt-5.6-sol─0s╯"
"  gpt-5.6-sol default · /tmp/project                                            "
