xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__esc_interrupt_goal_paused_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Xedoc to do anything                                                    │"
"╰────────────────────────────────────────────────────────────────gpt-5.6-sol─0s╯"
"  gpt-5.6-sol default · /tmp/project                Goal paused (/goal resume)  "
