xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__image_generation_begin_restores_working_status.snap
---
source: tui-chatwidget/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Xedoc to do anything                                                    │"
"╰──────────────────────────────────────────────────────────── gpt-5.6-sol ─ 0s ╯"
"  gpt-5.6-sol default · /tmp/project                                            "
